# WinSerial

./: .gitignore  CMakeLists.txt  README.md  Version.h.in  WinSerial.cpp  WinSerial.filters  WinSerial.h  WinSerial.iss  WinSerial.rc  WinSerial.sln  WinSerial.vcxproj  WinSerial.vcxproj.filters  framework.h  resource.h  targetver.h  vcpkg.json
.github/workflows/: ci.yml
scripts/: Add-TerminalProfile.ps1  Remove-TerminalProfile.ps1
